--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,101 +18,141 @@
         android:layout_centerVertical="true"
         android:background="@drawable/board"
         android:columnCount="3"
-        android:rowCount="3">
+        android:rowCount="3"
+        android:id="@+id/gridLayout">
 
         <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_column="0"
-            android:layout_row="0"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:onClick="dropIn"
             android:id="@+id/imageView1"
-            android:tag="0"/>
-        <ImageView
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_column="1"
+            android:layout_column="0"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:layout_row="0"
             android:onClick="dropIn"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
+            android:tag="0" />
+
+        <ImageView
             android:id="@+id/imageView2"
-            android:tag="1"/>
-        <ImageView
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_column="2"
+            android:layout_column="1"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="10dp"
             android:layout_row="0"
             android:onClick="dropIn"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
+            android:tag="1" />
+
+        <ImageView
             android:id="@+id/imageView3"
-            android:tag="2"/>
-        <ImageView
             android:layout_width="90dp"
             android:layout_height="90dp"
-            android:layout_column="0"
-            android:layout_row="1"
+            android:layout_column="2"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_row="0"
             android:onClick="dropIn"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="28dp"
+            android:tag="2" />
+
+        <ImageView
             android:id="@+id/imageView4"
-            android:tag="3"/>
-        <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_column="1"
-            android:layout_row="1"
-            android:onClick="dropIn"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="28dp"
-            android:id="@+id/imageView5"
-            android:tag="4"
-             />
-        <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_column="2"
-            android:layout_row="1"
-            android:onClick="dropIn"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="28dp"
-            android:id="@+id/imageView6"
-            android:tag="5" />
-        <ImageView
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_column="0"
-            android:layout_row="2"
-            android:onClick="dropIn"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="35dp"
-            android:id="@+id/imageView7"
-            android:tag="6"/>
+            android:layout_marginTop="28dp"
+            android:layout_row="1"
+            android:onClick="dropIn"
+            android:tag="3" />
+
         <ImageView
+            android:id="@+id/imageView5"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_column="1"
-            android:layout_row="2"
-            android:onClick="dropIn"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="35dp"
-            android:id="@+id/imageView8"
-            android:tag="7" />
+            android:layout_marginTop="28dp"
+            android:layout_row="1"
+            android:onClick="dropIn"
+            android:tag="4" />
+
         <ImageView
+            android:id="@+id/imageView6"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_column="2"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="28dp"
+            android:layout_row="1"
+            android:onClick="dropIn"
+            android:tag="5" />
+
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_column="0"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="35dp"
             android:layout_row="2"
             android:onClick="dropIn"
+            android:tag="6" />
+
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_column="1"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="35dp"
+            android:layout_row="2"
+            android:onClick="dropIn"
+            android:tag="7" />
+
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_column="2"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="35dp"
-            android:id="@+id/imageView9"
-            android:tag="8"/>
+            android:layout_row="2"
+            android:onClick="dropIn"
+            android:tag="8" />
 
     </GridLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="?android:attr/colorPressedHighlight"
+        android:orientation="vertical"
+        android:padding="30dp"
+        android:alpha="1"
+        android:id="@+id/playAgainLayout"
+        android:visibility="invisible">
+
+        <TextView
+            android:id="@+id/winnerMessage"
+            android:layout_width="96dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_centerVertical="true"
+            android:text="Game Over !!!"
+            android:gravity="center"
+            android:textColor="@android:color/black"
+            android:textStyle="bold|italic" />
+
+        <Button
+            android:id="@+id/playAgainButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="PLAY AGAIN"
+            android:onClick="resetGame" />
+    </LinearLayout>
 
 </RelativeLayout>
